# ztcpp-protocol

./: .gitignore  README.md
core/: nhp_sba.fbs  ztcpp.fbs
docs/: draft.txt
docs/api/: openapi.yaml
docs/architecture/: class_diagrams.md  nhp_sba_reference_architecture.md  sequence_diagrams.md  ztcpp_reference_architecture.md
docs/threat-model/: ZTCPP_Deterministic_Model.tla  ZTCPP_Deterministic_Model_TTrace_1781516796.tla  ZTCPP_Snapshot_Model.cfg  ZTCPP_Snapshot_Model.tla  ZTCPP_True_Formal_Model.cfg  ZTCPP_True_Formal_Model.tla  ZTCPP_True_Formal_Model_TTrace_1781516496.tla  nhp_sba_adversarial_model.tla  nhp_sba_formal_model.tla  nhp_sba_formal_security_spec.md  root_cause_analysis.md  tlc_deterministic_verification_logs.md  tlc_simulator.py  tlc_true_verification_logs.md  tlc_verification_logs.md  ztcpp_adversarial_model.tla  ztcpp_formal_model.tla  ztcpp_formal_security_spec.md
docs/threat-model/states/26-06-15-11-41-36.853/: ZTCPP_True_Formal_Model-0.st
integration/benchmarks_results/: benchmark_results.txt  simulation_metrics.csv
integration/e2e/: simulate_handshake.py
nhp_ac/: Cargo.toml  build.rs
nhp_ac/src/: crypto_pipeline.rs  lib.rs  main.rs
nhp_ac/src/config/: mod.rs  settings.rs
nhp_ac/src/crypto/: chacha20poly1305.rs  ed25519.rs  hkdf.rs  mod.rs  noise.rs  x25519.rs
nhp_ac/src/errors/: error.rs  mod.rs
nhp_ac/src/network/: mod.rs  session.rs  transport.rs  udp_listener.rs
nhp_ac/src/policy/: mod.rs  pep.rs
nhp_ac/src/protocol/: http2_frame.rs  knk.rs  mod.rs  nhp_state_machine.rs  packet.rs  replay.rs
nhp_ac/src/telemetry/: metrics.rs  mod.rs  tracing.rs
nhp_ac/tests/: fuzz_pipeline.rs
nhp_server/: README.md  agent_simulator.py  main.py  performance_evaluator.py  plot_results.py  pyproject.toml  simulation_metrics.csv
nhp_server/app/: main.py
nhp_server/app/api/: agentdns.py  dependencies.py  middleware.py  nhp_nrs.py  nrs.py  routes.py
nhp_server/app/models/: knk.py  policy.py  response.py
nhp_server/app/policy/: decision_engine.py  edns_metrics.py  mama_gate.py
nhp_server/app/protocol/: knk.py  state_machine.py  validators.py
nhp_server/app/sba/: amf.py  http2_client.py  nrf.py  pcf.py
nhp_server/app/security/: jws.py  jwt_validation.py  trust_store.py
nhp_server/app/telemetry/: logging.py  metrics.py  tracing.py
nhp_server/tests/: conftest.py  test_decision_engine.py  test_jwt_validation.py  test_knk_parser.py  test_mama_gate.py  test_state_machine.py  testhelpers.py
safety-gates/: evaluator.py
sat/: token_issuer.py
(+3 files in other folders)
