[package]
name = "nhp_ac"
version = "0.1.0"
edition = "2021"
description = "NHP-SBA Network Hiding Protocol - Access Controller (PEP)"
authors = ["NHP-SBA Engineering"]

[dependencies]
# Zero-copy serialization
flatbuffers = "23.5.26"

# Cryptography: ChaCha20-Poly1305 for AEAD Noise transport
chacha20poly1305 = "0.10.1"

# Cryptography: Ed25519 for detached JWS signature verification
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }

# Randomness for tests
rand = "0.8.5"

# Error handling
thiserror = "1.0.40"

[build-dependencies]
# No special build dependencies needed, we use std::process::Command in build.rs
