[project]
name = "nhp-server"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "httpx[http2]>=0.28",
    "hypercorn>=0.18",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "python-jose[cryptography]>=3.5",
    "jwcrypto>=1.5",
    "cryptography>=46.0",
    "orjson>=3.11",
    "aiofiles>=24.1",
    "anyio>=4.10",
    "tenacity>=9.1",
    "structlog>=25.4",
    "prometheus-client>=0.22",
    "opentelemetry-api>=1.37",
    "opentelemetry-sdk>=1.37",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "jsonschema>=4.25"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
